adding students page

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
               <span class="mediumText">Other stuff</span><hr>
 							<p><a href="publications.html">Publications</a></p>
 							<p><a href="teaching.html">Teaching</a></p>
+							<p><a href="students.html">Students</a></p>
 							<p><a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c">Reasonably current CV</a></p>
 
 							<div>
