--- a/students.html
+++ b/students.html
@@ -34,7 +34,7 @@
 							<span class="emphText">Current</span><hr>
 
 <div><div>
-<b>John Letey, independent study</b>
+<p style="font-weight:900">John Letey, independent study</p>
 </div></div>
 <div><br /></div>
 
