--- a/students.html
+++ b/students.html
@@ -27,26 +27,17 @@
 			</section>
 
 
-			<section id="prep" class="paddingTopped">
+			<section id="current" class="paddingTopped">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<div><div>
-<p style="font-weight:900">John Letey, independent study</p>
-</div></div>
-<div><br /></div>
+<p "font-weight:bold;">John Letey, independent study</p>
 
-<div><div>
-<b>Mingxuan Zhang, independent study</b>
-</div></div>
-<div><br /></div>
+<p style="font-weight:bold;">Mingxuan Zhang, independent study</p>
 
-<div><div>
-<b>H. Nihar Nandan, senior thesis</b>
-</div></div>
-<div><br /></div>
+<p>H. Nihar Nandan, senior thesis</p>
 
 						</div>
 					</div>
@@ -54,21 +45,15 @@
 			</section>
 
 
-			<section id="review" class="paddingTopped">
+			<section id="former" class="paddingTopped">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
 
-<div><div>
-<b>Rob Fuller, Master's thesis</b>
-</div></div>
-<div><br /></div>
+<p>Rob Fuller, Master's thesis</p>
 
-<div><div>
-<b>Alexandra Klufas, summer REU</b>
-</div></div>
-<div><br /></div>
+<p>Alexandra Klufas, summer REU</p>
 
 						</div>
 					</div>
