--- a/students.html
+++ b/students.html
@@ -33,9 +33,9 @@
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p "font-weight:bold;">John Letey, independent study</p>
+							<p><h3>John Letey</h3>, independent study</p>
 
-<p style="font-weight:bold;">Mingxuan Zhang, independent study</p>
+<p style="font-weight:bolder;">Mingxuan Zhang, independent study</p>
 
 <p>H. Nihar Nandan, senior thesis</p>
 
