--- a/students.html
+++ b/students.html
@@ -33,11 +33,11 @@
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-							<p><h3>John Letey</h3>, independent study</p>
+<p><strong>John Letey, independent study</strong> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels</p>
 
-<p style="font-weight:bolder;">Mingxuan Zhang, independent study</p>
+<p><strong>Mingxuan Zhang, independent study</strong> exploring the use of Markov chain Monte Carlo statistical calibration methods to constrain estimates of storm surge return levels</p>
 
-<p>H. Nihar Nandan, senior thesis</p>
+<p><strong>H. Nihar Nandan, senior thesis</strong> investigating the impacts of uncertainty characterization/quantification in statistical calibration framework, on projections for future temperature and sea levels</p>
 
 						</div>
 					</div>
@@ -51,9 +51,9 @@
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
 
-<p>Rob Fuller, Master's thesis</p>
+<p><strong>Rob Fuller, Master's thesis</strong> examining the value of expert assessment and probabilistic inversion in constraining projections of Antarctic ice sheet constributions to sea levels</p>
 
-<p>Alexandra Klufas, summer REU</p>
+<p><strong>Alexandra Klufas, summer REU internship</strong> characterizing the effects of length of data record on calibrated estimates of storm surge model parameters and return levels</p>
 
 						</div>
 					</div>
