--- a/students.html
+++ b/students.html
@@ -33,7 +33,7 @@
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><u>John Letey, independent study</u> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels</p>
+<p><span style="color:darkolivegreen;font-weight:bold">John Letey, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels</p>
 
 <p><u>Mingxuan Zhang, independent study</u> exploring the use of Markov chain Monte Carlo statistical calibration methods to constrain estimates of storm surge return levels</p>
 
