--- a/students.html
+++ b/students.html
@@ -33,11 +33,11 @@
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:darkolivegreen;font-weight:bold">John Letey, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels</p>
+<p><span style="color:teal;font-weight:bold">John Letey, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels</p>
 
-<p><u>Mingxuan Zhang, independent study</u> exploring the use of Markov chain Monte Carlo statistical calibration methods to constrain estimates of storm surge return levels</p>
+<p><span style="color:steelblue;font-weight:bold">Mingxuan Zhang, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to constrain estimates of storm surge return levels</p>
 
-<p><u>H. Nihar Nandan, senior thesis</u> investigating the impacts of uncertainty characterization/quantification in statistical calibration framework, on projections for future temperature and sea levels</p>
+<p><span style="color:firebrick;font-weight:bold">H. Nihar Nandan, senior thesis</span> investigating the impacts of uncertainty characterization/quantification in statistical calibration framework, on projections for future temperature and sea levels</p>
 
 						</div>
 					</div>
@@ -51,9 +51,9 @@
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
 
-<p><u>Rob Fuller, Master's thesis</u> examining the value of expert assessment and probabilistic inversion in constraining projections of Antarctic ice sheet constributions to sea levels</p>
+<p><span style="color:darkcyan;font-weight:bold">Rob Fuller, Master's thesis</span> examining the value of expert assessment and probabilistic inversion in constraining projections of Antarctic ice sheet constributions to sea levels</p>
 
-<p><u>Alexandra Klufas, summer REU internship</u> characterizing the effects of length of data record on calibrated estimates of storm surge model parameters and return levels</p>
+<p><span style="color:tomato;font-weight:bold">Alexandra Klufas, summer REU internship</span> characterizing the effects of length of data record on calibrated estimates of storm surge model parameters and return levels</p>
 
 						</div>
 					</div>
