--- a/students.html
+++ b/students.html
@@ -51,9 +51,9 @@
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
 
-<p><span style="color:darkcyan;font-weight:bold">Rob Fuller, Master's thesis</span> examining the value of expert assessment and probabilistic inversion in constraining projections of Antarctic ice sheet constributions to sea levels</p>
+<p><span style="color:tomato;font-weight:bold">Rob Fuller, Master's thesis</span> examining the value of expert assessment and probabilistic inversion in constraining projections of Antarctic ice sheet constributions to sea levels</p>
 
-<p><span style="color:tomato;font-weight:bold">Alexandra Klufas, summer REU internship</span> characterizing the effects of length of data record on calibrated estimates of storm surge model parameters and return levels</p>
+<p><span style="color:darkgreen;font-weight:bold">Alexandra Klufas, summer REU internship</span> characterizing the effects of length of data record on calibrated estimates of storm surge model parameters and return levels</p>
 
 						</div>
 					</div>
