new work in prep section

--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,12 @@
 						<div class="col-xs-12">
 							<span class="emphText">In preparation:</span><hr>
 
-<div><div>Extreme value statistics for storm surges, and the implications of uncertainties on coastal defense decision-making. If you are interested, by all means, ask me about it! I am always happy to chat.</div></div>
+<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2018), <u>Earth-system sensitivity constrained
+by the long-term carbon-cycle model GEOCARBSULFvolc</u></div></div>
+<div><br /></div>
+
+<div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical
+Behavior by Bayesian Model Averaging</u>, as a preprint: <a href="https://arxiv.org/abs/1808.06440">link</a></div></div>
 <div><br /></div>
 
 						</div>
@@ -63,7 +68,8 @@ Nothing at the moment, which is pretty nice.
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-<div><div><b>Wong, T.E.</b>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Risk</u>, <i>Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
+<div><div><b>Wong, T.E.</b>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural
+Uncertainty Underestimates Upper Tails of Flood Hazard</u>, <i>Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
 <div><br /></div>
 
 <div><div>Tabor, C., B. Otto-Bliesner, E. Brady, J. Nusbaumer, J. Zhu, M. Erb, <b>T.E. Wong</b>, Z. Liu, and D. Noone (2018), <u>Interpreting precession driven &#948;18O variability in the South Asian monsoon region</u>, <i>Journal of Geophysical Research: Atmospheres</i>, DOI: 10.1029/2018JD028424. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018JD028424">Link</a></div></div>
