--- a/publications.html
+++ b/publications.html
@@ -37,10 +37,6 @@
 by the long-term carbon-cycle model GEOCARBSULFvolc</u></div></div>
 <div><br /></div>
 
-<div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical
-Behavior by Bayesian Model Averaging</u>, as a preprint: <a href="https://arxiv.org/abs/1808.06440">link</a></div></div>
-<div><br /></div>
-
 						</div>
 					</div>
 				</div>
@@ -53,7 +49,13 @@ Behavior by Bayesian Model Averaging</u>, as a preprint: <a href="https://arxiv.
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-Nothing at the moment, which is pretty nice.
+<div><div>Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2018), Impacts of observational sea-level change constraints on estimates of climate sensitivity</u></div></div>
+<div><br /></div>
+
+<div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical
+Behavior by Bayesian Model Averaging</u>, as a preprint: <a href="https://arxiv.org/abs/1808.06440">link</a></div></div>
+<div><br /></div>
+
 							<div><br /></div>
 
 						</div>
