fixing name on geocarb manuscript

--- a/publications.html
+++ b/publications.html
@@ -33,8 +33,7 @@
 						<div class="col-xs-12">
 							<span class="emphText">In preparation:</span><hr>
 
-<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2018), <u>Earth-system sensitivity constrained
-by the long-term carbon-cycle model GEOCARBSULFvolc</u></div></div>
+<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2018), <u>Earth-system sensitivity constrained by long-term carbon-cycle observations</u></div></div>
 <div><br /></div>
 
 						</div>
