--- a/publications.html
+++ b/publications.html
@@ -53,10 +53,6 @@
 	<u>Impacts of observational sea-level change constraints on estimates of climate sensitivity</u></div></div>
 <div><br /></div>
 
-<div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical Behavior by Bayesian Model Averaging</u>, 
-	as a preprint: <a href="https://arxiv.org/abs/1808.06440">link</a></div></div>
-<div><br /></div>
-
 							<div><br /></div>
 
 						</div>
@@ -70,6 +66,10 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical Behavior by Bayesian Model Averaging</u>, 
+	<i>Advances in Statistical Climatology, Meteorology and Oceanography</i>, accepted, as a preprint: <a href="https://arxiv.org/abs/1808.06440">link</a></div></div>
+<div><br /></div>
 
 <div><div><b>Wong, T.</b> and B. Zaharatos (2018), <u>The Road to T1 and the Critical Role of Teaching Faculty</u>, 
 	<i>white paper submitted to University of Colorado Boulder Academic Futures Committee</i>, 
