--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
 							<span class="emphText">Published:</span><hr>
 
 <div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical Behavior by Bayesian Model Averaging</u>, 
-	<i>Advances in Statistical Climatology, Meteorology and Oceanography</i>, accepted, as a preprint: <a href="https://arxiv.org/abs/1808.06440">link</a></div></div>
+	<i>Advances in Statistical Climatology, Meteorology and Oceanography</i>, DOI: 10.5194/ascmo-4-53-2018. <a href="https://www.adv-stat-clim-meteorol-oceanogr.net/4/53/2018/">Link</a></div></div>
 <div><br /></div>
 
 <div><div><b>Wong, T.</b> and B. Zaharatos (2018), <u>The Road to T1 and the Critical Role of Teaching Faculty</u>, 
