--- a/students.html
+++ b/students.html
@@ -33,9 +33,15 @@
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:steelblue;font-weight:bold">Mingxuan Zhang, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to constrain estimates of storm surge return levels (2018)</p>
+<p><span style="color:steelblue;font-weight:bold">Mingxuan Zhang, independent study</span> exploring the use
+of Markov chain Monte Carlo statistical calibration methods to constrain estimates of storm surge return
+levels (2018-present)</p>
 
-<p><span style="color:firebrick;font-weight:bold">H. Nihar Nandan, senior thesis</span> investigating the impacts of uncertainty characterization/quantification in statistical calibration framework, on projections for future temperature and sea levels (2018)</p>
+<p><span style="color:firebrick;font-weight:bold">H. Nihar Nandan, senior thesis</span> investigating the
+impacts of uncertainty characterization/quantification in statistical calibration framework, on projections
+for future temperature and sea levels (2018-present)</p>
+
+<p><span style="color:firebrick;font-weight:bold">Kyle Rosenberg, independent study</span> designing a classifier for proposed Pokemon Go trades (2019-present)</p>
 
 						</div>
 					</div>
