--- a/teaching.html
+++ b/teaching.html
@@ -23,7 +23,9 @@
 
 
 <table style="width:80%" cellpadding="3">
-  <tr height="30"> <td><b>Instructor</b>, University of Colorado Boulder</td><td>Introduction to Data Science (CSCI 3022),<BR> Discrete Structures (CSCI 2824)</td><td>Fall 2018</td> </tr>
+  <tr height="30"> <td><b>Instructor</b>, University of Colorado Boulder</td><td>Starting Computing (CSCI
+1300),<BR> Introduction to Data Science (CSCI 3022)</td><td>Spring 2019</td> </tr>
+  <tr height="30"> <td></td><td>Introduction to Data Science (CSCI 3022),<BR> Discrete Structures (CSCI 2824)</td><td>Fall 2018</td> </tr>
   <tr height="30"> <td></td><td>Introduction to Data Science (CSCI 3022)</td><td>Summer 2018</td> </tr>
   <tr height="30"> <td></td><td>Introduction to Artificial Intelligence (CSCI 3202),<BR> Discrete Structures (CSCI 2824)</td><td>Spring 2018</td> </tr>
   <tr height="30"> <td>  </td><td>Discrete Structures (CSCI 2824)</td><td>Fall 2017</td> </tr>
