changing kyles student color

--- a/students.html
+++ b/students.html
@@ -41,7 +41,7 @@ levels (2018-present)</p>
 impacts of uncertainty characterization/quantification in statistical calibration framework, on projections
 for future temperature and sea levels (2018-present)</p>
 
-<p><span style="color:firebrick;font-weight:bold">Kyle Rosenberg, independent study</span> designing a classifier for proposed Pokemon Go trades (2019-present)</p>
+<p><span style="color:mediumspringgreen;font-weight:bold">Kyle Rosenberg, independent study</span> designing a classifier for proposed Pokemon Go trades (2019-present)</p>
 
 						</div>
 					</div>
