--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
               <span class="mediumText">About me</span><hr>
 <p>Mathematics is a powerful tool which enables us to answer interesting questions. In my research, I use mathematical and statistical tools to characterize uncertainty in physical models. In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.</p>
 
+		    					<div>
+							<section class="paddingTopped">
+							<span class="emphText">Current semester</span><hr>
+							<p>In Spring 2019, I am teaching CSCI 1300 (Starting Computing) and CSCI 3022 (Introduction to Data Science), advising a senior thesis, as well as three independent study projects in data science and applied statistics.</p>
+								
+							<p>I try to keep my office hours for each course separate, so I can dedicate my attention to each course. Please try to respect this office hours schedule, and if you need to meet and chat, send me an email to set something up so we can have a focused conversation (office hours can get crazy!).</p>
+								
+							<p>CSCI 1300: Tuesday, Wednesday, Thursday 12 - 1 PM</p>
+							<p>CSCI 3022: Tuesday, Wednesday, Thursday 11 AM - 12 PM</p>
+							</div>
+
 							<div>
 							<section class="paddingTopped">
 							<span class="emphText">Research interests</span><hr>
