--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<span class="emphText">Current semester</span><hr>
 							<p>In Spring 2019, I am teaching CSCI 1300 (Starting Computing) and CSCI 3022 (Introduction to Data Science), advising a senior thesis, as well as three independent study projects in data science and applied statistics.</p>
 								
-							<p>I try to keep my office hours for each course separate, so I can dedicate my attention to each course. Please try to respect this office hours schedule, and if you need to meet and chat, send me an email to set something up so we can have a focused conversation (office hours can get crazy!).</p>
+							<p>I try to keep my <b>office hours</b> for each course separate, so I can dedicate my attention. Please try to respect this office hours schedule, and if you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation (office hours can get crazy!).</p>
 								
 							<p>CSCI 1300: Tuesday, Wednesday, Thursday 12 - 1 PM</p>
 							<p>CSCI 3022: Tuesday, Wednesday, Thursday 11 AM - 12 PM</p>
