--- a/students.html
+++ b/students.html
@@ -43,6 +43,8 @@ for future temperature and sea levels (2018-present)</p>
 
 <p><span style="color:mediumpurple;font-weight:bold">Kyle Rosenberg, independent study</span> designing a classifier for proposed Pokemon Go trades (2019-present)</p>
 
+<p><span style="color:darkgoldenrod;font-weight:bold">Jon Oulton, independent study</span> cluster analysis and builing a recommendation system for rock climbing routes (2019-present)</p>
+
 						</div>
 					</div>
 				</div>
