--- a/publications.html
+++ b/publications.html
@@ -49,8 +49,8 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div>Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2018), 
-	<u>Impacts of observational sea-level change constraints on estimates of climate sensitivity</u></div></div>
+<div><div>Brady, E., S. Stevenson, D. Bailey, Z. Liu, D. Noone, J. Nusbaumer, B.L. Otto-Bliesner, C. Tabor, R. Tomas, <b>T.E. Wong</b>, J. Zhang, and J. Zhu (2019), 
+	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u></div></div>
 <div><br /></div>
 
 							<div><br /></div>
@@ -66,6 +66,11 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div>Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2019), 
+	<u>Impacts of observational sea-level change constraints on estimates of climate sensitivity</u>,
+	<i>Earth's Future</i>, accepted.</div></div>
+<div><br /></div>
 
 <div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical Behavior by Bayesian Model Averaging</u>, 
 	<i>Advances in Statistical Climatology, Meteorology and Oceanography</i>, DOI: 10.5194/ascmo-4-53-2018. <a href="https://www.adv-stat-clim-meteorol-oceanogr.net/4/53/2018/">Link</a></div></div>
