--- a/index.html
+++ b/index.html
@@ -63,6 +63,41 @@
       </section>
 
 
+	<section id="otherstuff" class="paddingTopped">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <span class="mediumText">Here is some information</span><hr>
+							<p><a href="publications.html">Publications</a></p>
+							<p><a href="teaching.html">Teaching</a></p>
+							<p><a href="students.html">Students</a></p>
+							<p><a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c">Reasonably current CV</a></p>
+
+							<div>
+							<section class="paddingTopped">
+							<span class="emphText">Education</span><hr>
+							<div>PhD, Applied Mathematics, University of Colorado at Boulder, 2016</div>
+							<div>MS, Applied Mathematics, University of Colorado at Boulder, 2012</div>
+							<div>BA, Mathematics (hons.) and Astrophysics, Ohio Wesleyan University, 2010</div>
+							</div>
+
+							<div>
+							<section class="paddingTopped">
+							<span class="emphText">Contact information</span><hr>
+							<div>Office: ECOT 623</div>
+							<div>Email: anthony.e.wong[at]colorado.edu</div>
+							<div>Department of Computer Science</div>
+							<div>430 UCB</div>
+							<div>University of Colorado Boulder</div>
+							<div>Boulder, CO 80309-0430, USA</div>
+
+							</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+		
       <section id="projects" class="paddingTopped">
         <div class="container">
           <span class="mediumText">Projects</span><hr>
@@ -109,41 +144,6 @@
           </ul>
         </div>
 -->
-      </section>
-
-
-			<section id="otherstuff" class="paddingTopped">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <span class="mediumText">Other stuff</span><hr>
-							<p><a href="publications.html">Publications</a></p>
-							<p><a href="teaching.html">Teaching</a></p>
-							<p><a href="students.html">Students</a></p>
-							<p><a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c">Reasonably current CV</a></p>
-
-							<div>
-							<section class="paddingTopped">
-							<span class="emphText">Education</span><hr>
-							<div>PhD, Applied Mathematics, University of Colorado at Boulder, 2016</div>
-							<div>MS, Applied Mathematics, University of Colorado at Boulder, 2012</div>
-							<div>BA, Mathematics (hons.) and Astrophysics, Ohio Wesleyan University, 2010</div>
-							</div>
-
-							<div>
-							<section class="paddingTopped">
-							<span class="emphText">Contact information</span><hr>
-							<div>Office: ECOT 623</div>
-							<div>Email: anthony.e.wong[at]colorado.edu</div>
-							<div>Department of Computer Science</div>
-							<div>430 UCB</div>
-							<div>University of Colorado Boulder</div>
-							<div>Boulder, CO 80309-0430, USA</div>
-
-							</div>
-            </div>
-          </div>
-        </div>
       </section>
 
 
