--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
 
 <div><div>Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2019), 
 	<u>Impacts of observational sea-level change constraints on estimates of climate sensitivity</u>,
-	<i>Earth's Future</i>, accepted.</div></div>
+	<i>Earth's Future</i>, DOI: 10.1029/2018EF001082.</div></div>
 <div><br /></div>
 
 <div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical Behavior by Bayesian Model Averaging</u>, 
