--- a/students.html
+++ b/students.html
@@ -44,10 +44,6 @@ levels (2018-present)</p>
 impacts of uncertainty characterization/quantification in statistical calibration framework, on projections
 for future temperature and sea levels (2018-present)</p>
 
-<p><span style="color:mediumpurple;font-weight:bold">Kyle Rosenberg, independent study</span> designing a classifier for proposed Pokemon Go trades (2019-present)</p>
-
-<p><span style="color:darkgoldenrod;font-weight:bold">Jon Oulton, independent study</span> cluster analysis and builing a recommendation system for rock climbing routes (2019-present)</p>
-
 						</div>
 					</div>
 				</div>
@@ -59,6 +55,10 @@ for future temperature and sea levels (2018-present)</p>
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
+
+<p><span style="color:mediumpurple;font-weight:bold">Kyle Rosenberg, independent study</span> designing a classifier for proposed Pokemon Go trades (2019)</p>
+
+<p><span style="color:darkgoldenrod;font-weight:bold">Jon Oulton, independent study</span> cluster analysis and builing a recommendation system for rock climbing routes (2019)</p>
 
 <p><span style="color:teal;font-weight:bold">John Letey, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels (2018)</p>
 
