--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,8 @@
 
 <div><div>Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2019), 
 	<u>Impacts of observational sea-level change constraints on estimates of climate sensitivity</u>,
-	<i>Earth's Future</i>, DOI: 10.1029/2018EF001082.</div></div>
+	<i>Earth's Future</i>, DOI: 10.1029/2018EF001082.
+	<a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018EF001082">Link</a></div></div>
 <div><br /></div>
 
 <div><div><b>Wong, T.E.</b> (2018), <u>An Integration and Assessment of Nonstationary Storm Surge Statistical Behavior by Bayesian Model Averaging</u>, 
@@ -88,7 +89,8 @@
 <div><br /></div>
 
 <div><div><b>Wong, T.E.</b>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural
-Uncertainty Underestimates Upper Tails of Flood Hazard</u>, <i>Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
+Uncertainty Underestimates Upper Tails of Flood Hazard</u>, <i>Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. 
+	<a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
 <div><br /></div>
 
 <div><div>Tabor, C., B. Otto-Bliesner, E. Brady, J. Nusbaumer, J. Zhu, M. Erb, <b>T.E. Wong</b>, Z. Liu, and D. Noone (2018), <u>Interpreting precession driven &#948;18O variability in the South Asian monsoon region</u>, <i>Journal of Geophysical Research: Atmospheres</i>, DOI: 10.1029/2018JD028424. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018JD028424">Link</a></div></div>
