--- a/publications.html
+++ b/publications.html
@@ -20,7 +20,7 @@
 					<div class="row">
 						<div class="col-xs-12">
 						<span class="mediumText">Publications</span><hr>
-<p>I try to keep links to PDF copies of each paper available below. If a link is broken or missing, please email me at whatever address is listed in my contact information.</p>
+<p>If you are unable to track down a PDF of any of my publications, feel free to email me and I will be happy to help out.</p>
 						</div>
 					</div>
 				</div>
@@ -49,10 +49,6 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div>Brady, E., S. Stevenson, D. Bailey, Z. Liu, D. Noone, J. Nusbaumer, B.L. Otto-Bliesner, C. Tabor, R. Tomas, <b>T.E. Wong</b>, J. Zhang, and J. Zhu (2019), 
-	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u></div></div>
-<div><br /></div>
-
 							<div><br /></div>
 
 						</div>
@@ -66,6 +62,10 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div>Brady, E., S. Stevenson, D. Bailey, Z. Liu, D. Noone, J. Nusbaumer, B.L. Otto-Bliesner, C. Tabor, R. Tomas, <b>T.E. Wong</b>, J. Zhang, and J. Zhu (2019), 
+	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u>, accepted for publication in <i>Journal of Advances in Modeling Earth Systems</i>. </div></div>
+<div><br /></div>
 
 <div><div>Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2019), 
 	<u>Impacts of observational sea-level change constraints on estimates of climate sensitivity</u>,
