--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@
 							<span class="emphText">Published:</span><hr>
 
 <div><div>Brady, E., S. Stevenson, D. Bailey, Z. Liu, D. Noone, J. Nusbaumer, B.L. Otto-Bliesner, C. Tabor, R. Tomas, <b>T.E. Wong</b>, J. Zhang, and J. Zhu (2019), 
-	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u>, accepted for publication in <i>Journal of Advances in Modeling Earth Systems</i>. </div></div>
+	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u>, accepted for publication in <i>Journal of Advances in Modeling Earth Systems</i>, DOI: 10.1029/2019MS001663. </div></div>
 <div><br /></div>
 
 <div><div>Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2019), 
