--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
       <section class="fullHeight" id="welcome">
         <div class="text-center vertical-center blockRel">
 					<p><img src="./pictures/tony03.jpeg" width=350 alt="tony" class="center"></p>
-          <p class="bigText" id="name">Hey! I'm Tony</p>
+          <p class="bigText" id="name">Hi! I'm Tony</p>
+<!--
           <p class="secondHeadline" id="secondHeadline">I'm an Instructor at the University of Colorado Boulder.</p>
+-->
         </div>
       </section>
 
@@ -86,12 +88,12 @@
 							<div>
 							<section class="paddingTopped">
 							<span class="emphText">Contact information</span><hr>
-							<div>Office: ECOT 623</div>
-							<div>Email: anthony.e.wong[at]colorado.edu</div>
-							<div>Department of Computer Science</div>
-							<div>430 UCB</div>
-							<div>University of Colorado Boulder</div>
-							<div>Boulder, CO 80309-0430, USA</div>
+							<div>Office: TBA</div>
+							<div>Email: TBA</div>
+							<div>Department of TBA</div>
+							<div>TBA</div>
+							<div>TBA</div>
+							<div>Rochester, NY 14623, USA</div>
 
 							</div>
             </div>
