--- a/index.html
+++ b/index.html
@@ -34,14 +34,18 @@
 							</div>
 							<div><br></div>
               <span class="mediumText">About me</span><hr>
-<p>Mathematics is a powerful tool which enables us to answer interesting questions. In my research, I use mathematical and statistical tools to characterize uncertainty in physical models. In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.</p>
+	<p>Mathematics is a powerful tool which enables us to answer interesting questions. 
+	In my research, I use mathematical and statistical tools to characterize uncertainty in physical models.
+	I am particularly interested in assessing how these modeling uncertainties map to uncertainty in decision-making, in settings ranging from mitigating climate risks to determining how best to split the bill when getting dinner with friends.
+	In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.
+		    </p>
 
 		    					<div>
 							<section class="paddingTopped">
 							<span class="emphText">Current semester</span><hr>
 							<p>It's summer! Go play outside.</p>
 <!--
-							<p>In Spring 2019, I am teaching CSCI 1300 (Starting Computing) and CSCI 3022 (Introduction to Data Science), advising a senior thesis, as well as three independent study projects in data science and applied statistics.</p>
+							<p>In Fall 2019, I am teaching CSCI 1300 (Starting Computing) and CSCI 3022 (Introduction to Data Science), advising a senior thesis, as well as three independent study projects in data science and applied statistics.</p>
 								
 							<p>I try to keep my <b>office hours</b> for each course separate, so I can dedicate my attention. Please try to respect this office hours schedule, and if you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation (office hours can get crazy!).</p>
 								
@@ -54,7 +58,7 @@
 							<span class="emphText">Research interests</span><hr>
 							<p>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal, ineffective, and - at worst - outright dangerous policy decisions. To avoid this, we must use the information we have available make the best possible policy decisions. This requires accounting for not only varying forms of uncertainty in model parameters and projections, but deep uncertainty - uncertainty in the uncertainty in model structure and parameters. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</p>
 
-<p>In particular, I am interested in future projections of sea-level rise and their impacts on coastal defense decision-making. This includes examining statistical model calibration techniques and extreme value statistical models.</p>
+<p>I am interested in future projections of sea-level rise and their impacts on coastal defense decision-making. This includes examining statistical model calibration techniques and extreme value statistical models.</p>
 							</div>
 
 							<div>
@@ -88,11 +92,10 @@
 							<div>
 							<section class="paddingTopped">
 							<span class="emphText">Contact information</span><hr>
-							<div>Office: TBA</div>
+							<div>Office: GOS-2256</div>
 							<div>Email: TBA</div>
-							<div>Department of TBA</div>
-							<div>TBA</div>
-							<div>TBA</div>
+							<div>School of Mathematical Sciences</div>
+							<div>Rochester Institute of Technology</div>
 							<div>Rochester, NY 14623, USA</div>
 
 							</div>
