--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     <body>
       <section class="fullHeight" id="welcome">
         <div class="text-center vertical-center blockRel">
-					<p><img src="./pictures/tony03.jpeg" width=350 alt="tony" class="center"></p>
+					<p><img src="./pictures/tony03.jpeg" width=330 alt="tony" class="center"></p>
           <p class="bigText" id="name">Hi! I'm Tony</p>
-<!--
-          <p class="secondHeadline" id="secondHeadline">I'm an Instructor at the University of Colorado Boulder.</p>
--->
+          <p class="secondHeadline" id="secondHeadline">I'm an assistant professor at the Rochester Institute of Technology.</p>
         </div>
       </section>
 
@@ -29,29 +27,29 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-							<div class="centered">
-								<img src="./pictures/bao2013.jpg" width=1000 alt="bao tower" class="center">
-							</div>
-							<div><br></div>
-              <span class="mediumText">About me</span><hr>
-	<p>Mathematics is a powerful tool which enables us to answer interesting questions. 
+		    <div class="centered">
+			<img src="./pictures/bao2013.jpg" width=1000 alt="bao tower" class="center">
+		    </div>
+		    <div><br></div>
+		    <span class="mediumText">About me</span><hr>
+		    <p>Mathematics is a powerful tool which enables us to answer interesting questions. 
 	In my research, I use mathematical and statistical tools to characterize uncertainty in physical models.
 	I am particularly interested in assessing how these modeling uncertainties map to uncertainty in decision-making, in settings ranging from mitigating climate risks to determining how best to split the bill when getting dinner with friends.
 	In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.
 		    </p>
 
-		    					<div>
-							<section class="paddingTopped">
-							<span class="emphText">Current semester</span><hr>
-							<p>It's summer! Go play outside.</p>
+		    <div>
+			    <section class="paddingTopped">
+				    <span class="emphText">Current semester</span><hr>
+				    <p>It's summer! Go play outside.</p>
 <!--
-							<p>In Fall 2019, I am teaching CSCI 1300 (Starting Computing) and CSCI 3022 (Introduction to Data Science), advising a senior thesis, as well as three independent study projects in data science and applied statistics.</p>
-								
-							<p>I try to keep my <b>office hours</b> for each course separate, so I can dedicate my attention. Please try to respect this office hours schedule, and if you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation (office hours can get crazy!).</p>
-								
-							<p>CSCI 1300: Tuesday, Wednesday, Thursday 12 - 1 PM</p>
-							<p>CSCI 3022: Tuesday, Wednesday, Thursday 11 AM - 12 PM</p>
-							</div>
+					<p>In Fall 2019, I am teaching CSCI 1300 (Starting Computing)</p>
+
+					<p><b>Office hours:</b></p>
+					<p>CSCI 1300: Tuesday, Wednesday, Thursday 12 - 1 PM</p>
+					<p>CSCI 3022: Tuesday, Wednesday, Thursday 11 AM - 12 PM</p>
+					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation (office hours can get crazy!)</p>
+					</div>
 -->
 							<div>
 							<section class="paddingTopped">
