--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="text-center vertical-center blockRel">
 					<p><img src="./pictures/tony03.jpeg" width=330 alt="tony" class="center"></p>
           <p class="bigText" id="name">Hi! I'm Tony</p>
-          <p class="secondHeadline" id="secondHeadline">I'm an assistant professor at the Rochester Institute of Technology.</p>
+          <p class="secondHeadline" id="secondHeadline">I'm an assistant professor in the School of Mathematical Sciences at the Rochester Institute of Technology.</p>
         </div>
       </section>
 
