--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		    <p>Mathematics is a powerful tool which enables us to answer interesting questions. 
 	In my research, I use mathematical and statistical tools to characterize uncertainty in physical models.
 	I am particularly interested in assessing how these modeling uncertainties map to uncertainty in decision-making, in settings ranging from mitigating climate risks to determining how best to split the bill when getting dinner with friends.
-	In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.
+	In the classroom, I aim to draw on these experiences to show students that mathematics is much more than just a set of prerequisites for their other coursework.
 		    </p>
 
 		    <div>
