--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<section class="paddingTopped">
 							<span class="emphText">Contact information</span><hr>
 							<div>Office: GOS-2256</div>
-							<div>Email: TBA</div>
+							<div>Email: Tony.Wong@rit.edu</div>
 							<div>School of Mathematical Sciences</div>
 							<div>Rochester Institute of Technology</div>
 							<div>Rochester, NY 14623, USA</div>
@@ -156,7 +156,7 @@
         <div class="text-center paddingBottom">
           <p class="iconFooter">
             <!-- <a href="http://linkedin.com/in/TODO" class="a"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp; -->
-            <a href="mailto:anthony.e.wong@colorado.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+            <a href="mailto:Tony.Wong@rit.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
             <a href="http://github.com/tonyewong" class="c"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
             <!-- <a href="http://twitter.com/TODO" class="d"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp; -->
             <!-- <a href="http://medium.com/@TODO" class="e"><i class="fa fa-medium"></i></a>&nbsp;&nbsp; -->
