--- a/publications.html
+++ b/publications.html
@@ -105,10 +105,10 @@ Uncertainty Underestimates Upper Tails of Flood Hazard</u>, <i>Environmental Res
 <div><div>[13] <b>Wong, T.E.</b> and K. Keller (2017), <u>Deep Uncertainty Surrounding Coastal Flood Risk Projections: A Case Study for New Orleans</u>, <i>Earth's Future</i>, DOI: 10.1002/2017EF000607. <a href="http://onlinelibrary.wiley.com/doi/10.1002/2017EF000607/full">Link</a></div></div>
 <div><br /></div>
 
-<div><div>[12] <b>Wong, T.E.</b>, A.M.R. Bakker, and K. Keller (2017), <u>Impacts of Antarctic Fast Dynamics on Sea-Level Projectinos and Coastal Flood Defense</u>, <i>Climatic Change</i>, DOI: 10.1007/s10584-017-2039-4. <a href='https://link.springer.com/article/10.1007%2Fs10584-017-2039-4#enumeration'>Link</a></div></div>
+<div><div>[12] <b>Wong, T.E.</b>, A.M.R. Bakker, and K. Keller (2017), <u>Impacts of Antarctic Fast Dynamics on Sea-Level Projections and Coastal Flood Defense</u>, <i>Climatic Change</i>, DOI: 10.1007/s10584-017-2039-4. <a href='https://link.springer.com/article/10.1007%2Fs10584-017-2039-4#enumeration'>Link</a></div></div>
 <div><br /></div>
 
-<div><div>[11] <b>Wong, T.E.</b>, A.M.R. Bakker, K.L. Ruckert, P.J. Applegate, K. Keller (2017), <u>BRICK v0.2, a simple, accessible and transparent model framework for cliamte and regional sea-level projections</u>, <i>Geoscientific Model Development</i>, DOI: 10.5194/gmd-10-2741-2017. <a href="http://www.geosci-model-dev.net/10/2741/2017/gmd-10-2741-2017.html">Link</a></div></div>
+<div><div>[11] <b>Wong, T.E.</b>, A.M.R. Bakker, K.L. Ruckert, P.J. Applegate, A.B.A. Slangen, K. Keller (2017), <u>BRICK v0.2, a simple, accessible and transparent model framework for cliamte and regional sea-level projections</u>, <i>Geoscientific Model Development</i>, DOI: 10.5194/gmd-10-2741-2017. <a href="http://www.geosci-model-dev.net/10/2741/2017/gmd-10-2741-2017.html">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[10] Zhu, J., L. Zhengyu, E. Brady, B.L. Otto-Bliesner, J. Zhang, D. Noone, R. Tomas, J. Nusbaumer, <b>T.E. Wong</b>, A. Jahn, and C. Tabor (2017), <u>Reduced ENSO Variability at the LGM Revealed by an Isotope-enabled Earth System Model</u>, <i>Geophysical Research Letters</i>, DOI: 10.1002/2017GL073406. <a href="http://onlinelibrary.wiley.com/doi/10.1002/2017GL073406/full">Link</a></div></div>
