--- a/index.html
+++ b/index.html
@@ -41,16 +41,11 @@
 		    <div>
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
-				    <p>It's summer! Go play outside.</p>
-<!--
-					<p>In Fall 2019, I am teaching CSCI 1300 (Starting Computing)</p>
-
+					<p>In Fall 2019, I am teaching MATH 181: Project-Based Calculus I</p>
 					<p><b>Office hours:</b></p>
-					<p>CSCI 1300: Tuesday, Wednesday, Thursday 12 - 1 PM</p>
-					<p>CSCI 3022: Tuesday, Wednesday, Thursday 11 AM - 12 PM</p>
-					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation (office hours can get crazy!)</p>
+					<p>Mon 10:30-12, Wed 10:30-12, Fri 10-11, and by appointment</p>
+					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
--->
 							<div>
 							<section class="paddingTopped">
 							<span class="emphText">Research interests</span><hr>
