--- a/students.html
+++ b/students.html
@@ -33,9 +33,6 @@
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:firebrick;font-weight:bold">H. Nihar Nandan, senior thesis</span> investigating the
-impacts of uncertainty characterization/quantification in statistical calibration framework, on projections
-for future temperature and sea levels (2018-present)</p>
 
 						</div>
 					</div>
@@ -48,6 +45,10 @@ for future temperature and sea levels (2018-present)</p>
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
+
+<p><span style="color:firebrick;font-weight:bold">H. Nihar Nandan, senior thesis</span> investigating the
+impacts of uncertainty characterization/quantification in statistical calibration framework, on projections
+for future temperature and sea levels (2018-2019)</p>
 
 <p><span style="color:coral;font-weight:bold">Travis Torline, Undergraduate Student Assistant</span> reconciling multiple approaches to
 to constrain nonstationary projections of coastal storm surge flood risk (2019)</p>
