--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
       <section class="fullHeight" id="welcome">
         <div class="text-center vertical-center blockRel">
-					<p><img src="./pictures/tony03.jpeg" width=330 alt="tony" class="center"></p>
+					<p><img src="./pictures/tony_wong_rit" width=300 alt="tony" class="center"></p>
           <p class="bigText" id="name">Hi! I'm Tony</p>
           <p class="secondHeadline" id="secondHeadline">I'm a professor in the School of Mathematical Sciences at the Rochester Institute of Technology.</p>
         </div>
