--- a/publications.html
+++ b/publications.html
@@ -33,9 +33,6 @@
 						<div class="col-xs-12">
 							<span class="emphText">In preparation:</span><hr>
 
-<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2018), 
-	<u>Earth-system sensitivity constrained by long-term carbon-cycle observations</u></div></div>
-<div><br /></div>
 
 						</div>
 					</div>
@@ -48,6 +45,14 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
+
+<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2019), 
+	<u>Earth-system sensitivity constrained by long-term carbon-cycle observations</u></div></div>
+<div><br /></div>
+
+<div><div>Vega-Westhoff, B., R. Sriver, C. Hartin, <b>T. Wong</b>, and K. Keller (2019), 
+	<u>The Role of climate sensitivity in extreme sea-level rise projections</u></div></div>
+<div><br /></div>
 
 							<div><br /></div>
 
