--- a/publications.html
+++ b/publications.html
@@ -68,6 +68,10 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
+<div><div>[20] <b>Wong, T.E.</b> (2019), <u>Lasting coastal hazards from past greenhouse gas emissions</u>, 
+	<i>Proceedings of the National Academy of Sciences</i>, DOI: 10.1073/pnas.1917051116. <a href="https://doi.org/10.1073/pnas.1917051116">Link</a></div></div>
+<div><br /></div>
+
 <div><div>[22] Brady, E., S. Stevenson, D. Bailey, Z. Liu, D. Noone, J. Nusbaumer, B.L. Otto-Bliesner, C. Tabor, R. Tomas, <b>T.E. Wong</b>, J. Zhang, and J. Zhu (2019), 
 	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u>, accepted for publication in <i>Journal of Advances in Modeling Earth Systems</i>, DOI: 10.1029/2019MS001663. </div></div>
 <div><br /></div>
