--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
 							<span class="emphText">In review:</span><hr>
 
 <div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2019), 
-	<u>Earth-system sensitivity constrained by long-term carbon-cycle observations</u></div></div>
+	<u>Earth-system sensitivity constrained by long-term carbon-cycle observations</u>. <a href="https://arxiv.org/abs/1910.11987">Preprint here</a></div></div>
 <div><br /></div>
 
 <div><div>Vega-Westhoff, B., R. Sriver, C. Hartin, <b>T. Wong</b>, and K. Keller (2019), 
@@ -73,7 +73,7 @@
 <div><br /></div>
 
 <div><div>[22] Brady, E., S. Stevenson, D. Bailey, Z. Liu, D. Noone, J. Nusbaumer, B.L. Otto-Bliesner, C. Tabor, R. Tomas, <b>T.E. Wong</b>, J. Zhang, and J. Zhu (2019), 
-	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u>, accepted for publication in <i>Journal of Advances in Modeling Earth Systems</i>, DOI: 10.1029/2019MS001663. </div></div>
+	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u>, accepted for publication in <i>Journal of Advances in Modeling Earth Systems</i>, DOI: 10.1029/2019MS001663. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2019MS001663">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[21] Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2019), 
