--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         </div>
       </section>
 
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">publications</a>
+  <a href="#">teaching</a>
+  <a href="#">students</a>
+</div>
+
+<!-- Use any element to open the sidenav -->
+<span onclick="openNav()">open</span>
 
       <section id="description">
         <div class="container">
